import { expect, test } from "bun:test";
import { DraftConverter } from "../src/index";
import draftListSimple from "./draft-list-simple.json";
import draftDeepList from "./draft-deep-list.json";
import draftNestedList from "./draft-nested-list.json";
import draftCheckableListSimple from "./draft-checkable-list-simple.json";
import draftList from "./draft-list.json";
import draftCheckableList from "./draft-checkable-list.json";
import draftInput from "./draft-input.json";
import draftAxios from "./draft-axios.json";
import draftTail from "./draft-drafttail.json";
import draftTailTable from "./draft-table-drafttail.json";
import draftMediumComplex from "./draft-medium-complex.json";

test("draft-list-simple", () => {
  const converter = new DraftConverter();
  expect(converter.convert(draftListSimple)).toMatchSnapshot();
});

test("draft-deep-list", () => {
  const converter = new DraftConverter();
  expect(converter.convert(draftDeepList)).toMatchSnapshot();
});

test("draft-nested-list", () => {
  const converter = new DraftConverter();
  expect(converter.convert(draftNestedList)).toMatchSnapshot();
});

test("draft-checkable-list-simple", () => {
  const converter = new DraftConverter();
  expect(converter.convert(draftCheckableListSimple)).toMatchSnapshot();
});

test("draft-list", () => {
  const converter = new DraftConverter();
  expect(converter.convert(draftList)).toMatchSnapshot();
});

test("draft-checkable-list", () => {
  const converter = new DraftConverter();
  expect(converter.convert(draftCheckableList)).toMatchSnapshot();
});

test("draft-input", () => {
  const converter = new DraftConverter();
  expect(converter.convert(draftInput as any)).toMatchSnapshot();
});

test("draft-axios", () => {
  const converter = new DraftConverter();
  expect(converter.convert(draftAxios as any)).toMatchSnapshot();
});

test("draft-drafttail", () => {
  const converter = new DraftConverter();
  expect(converter.convert(draftTail as any)).toMatchSnapshot();
});

test("draft-table-drafttail", () => {
  const converter = new DraftConverter();
  expect(converter.convert(draftTailTable as any)).toMatchSnapshot();
});

test("draft-medium-complex", () => {
  const converter = new DraftConverter();
  expect(converter.convert(draftMediumComplex as any)).toMatchSnapshot();
});

test("draft-medium-complex", () => {
  const converter = new DraftConverter();
  expect(
    converter.convert({
      blocks: [
        {
          key: "a5rh8",
          text: "🕺🏽 Krewe of Boo hosts a jazz second-line through the French Quarter at 3pm, followed by happy hour at Pat O'Brien's. (Details)",
          type: "unstyled",
          depth: 0,
          inlineStyleRanges: [
            {
              style: "BOLD",
              length: 12,
              offset: 3,
            },
            {
              style: "ITALIC",
              length: 7,
              offset: 118,
            },
          ],
          entityRanges: [
            {
              offset: 118,
              length: 7,
              key: 0,
            },
          ],
          data: {},
        },
      ],
      // @ts-ignore
      entityMap: [
        {
          type: "LINK",
          mutability: "MUTABLE",
          data: {
            rel: "noreferrer",
            url: "https://www.kreweofboo.com/secondline",
            href: "https://www.kreweofboo.com/secondline",
            target: "_blank",
          },
        },
      ],
    })
  ).toEqual({
    type: "doc",
    content: [
      {
        type: "paragraph",
        content: [
          {
            type: "text",
            text: "🕺🏽 ",
          },
          {
            type: "text",
            text: "Krewe of Boo",
            marks: [
              {
                type: "bold",
              },
            ],
          },
          {
            type: "text",
            text: " hosts a jazz second-line through the French Quarter at 3pm, followed by happy hour at Pat O'Brien's. (",
          },
          {
            type: "text",
            text: "Details",
            marks: [
              {
                type: "link",
                attrs: {
                  href: "https://www.kreweofboo.com/secondline",
                  target: "_blank",
                },
              },
              {
                type: "italic",
              },
            ],
          },
          {
            type: "text",
            text: ")",
          },
        ],
      },
    ],
  });
});
